--- a/tarefas/estilos.css
+++ b/tarefas/estilos.css
@@ -11,6 +11,7 @@ h1 {
   font-size: 2.5rem;
   line-height: 1.2;
   margin-bottom: 3rem;
+  color: #228;
 }
 
 h2 {
@@ -25,6 +26,7 @@ h3 {
   font-size: 1.25rem;
   line-height: 1.2;
   margin-bottom: 1.5rem;
+  color: #228;
 }
 
 table {
@@ -43,7 +45,7 @@ th {
   text-align: left;
   vertical-align: bottom;
   padding: 0.75rem;
-  font-weight: 400;
+  font-weight: 400;  
 }
 
 td {
@@ -68,13 +70,13 @@ button {
   font-weight: 400;
   line-height: 1.5;
   text-align: center;
-  background-color: transparent;
+  background-color: #228;
   border: 1px solid transparent;
   padding: 6px 12px;
   font-size: 0.75rem;
   border-radius: .25rem;
   transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-  color: #555;
+  color: #fff;
   border-color: #555;
 }
 
