--- a/style.css
+++ b/style.css
@@ -111,8 +111,11 @@ body{
 }
 
 .ifPrincipal{
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
     font-family: "Roboto", "Arial", sans-serif;
-    background-color: #fff;
+    background-color: white;
     width: 100%;
     height: 100%;
     overflow-x: hidden;   
