--- a/home/home.css
+++ b/home/home.css
@@ -1,29 +1,17 @@
-/* .gridSuperior{
-   display: grid;
-   grid-template-columns: 100%;
-   grid-template-rows: 100px 250px;
-   grid-template-areas: 'titulo'
-                        'graficoDiario graficoDiario graficoDiario';                        
-   gap: 10px;
+@media (max-width:600px){
+   .grid{
+      grid-gap: 0;
+      grid-template-columns: 1fr;
+      grid-template-rows: auto 100px 1fr auto;
+      grid-template-areas: 'titulo'
+                           'graficoDiario'
+                           'calendario'
+                           'graficoPizza'
+                           'notificacoe';  
+      gap: 10px;
+   }
 }
-.gridInferior{
-   display: grid;
-   grid-template-columns: 33%;
-   grid-template-rows: 250px;
-   grid-template-areas: 'notificacoes calendario graficoPizza';
-   gap: 10px;
-   
-} */
 
-/* .b{
-   display: grid;
-   grid-template-columns: 250px 250px 250px;
-   grid-template-rows: 100px 250px 250px;
-   grid-template-areas: 'titulo titulo titulo'
-                        'graficoDiario graficoDiario graficoDiario'
-                        'notificacoe calendario graficoPizza';                        
-   gap: 10px;
-} */
 .grid{
    display: grid;
    grid-template-columns: 300px 300px 300px ;
