--- a/style.css
+++ b/style.css
@@ -30,7 +30,6 @@ body{
     margin: 50px;
 }
 
-
 .logo{
     background-color: blueviolet;
     display: flex;
@@ -65,6 +64,17 @@ body{
     margin: 0px 0px 0px 50px; 
 }
 
+/* @media screen and (min-width:600px) {
+    .principal{
+        width: 40%;
+       }
+    .ifPrincipal{
+        width: 40%;
+    } 
+    body{background-color: red;} 
+
+    
+} */
 .principal{
     display: flex;
     justify-content: center;
