--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body{
     align-items: center;
     background-color: #ddd;
     width: 100%;
-    margin: 0px 0px 0px 50px; 
+    /* margin: 0px 0px 0px 0px;  */
 }
 
 /* @media screen and (min-width:600px) {
@@ -82,7 +82,7 @@ body{
     background-color: #fff;
     width: 100%;
     height: 100vh;  
-    margin: 0px 0px 0px 50px;       
+    /* margin: 0px 0px 0px 0px;        */
 }
 
 .aba{
