--- a/financeiro/tarefas.css
+++ b/financeiro/tarefas.css
@@ -53,4 +53,16 @@ table {
     margin-top: 2em;
     margin-bottom: 0;
   }
+  .corpoModal {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 10px 20px;
+    border: 1px solid #888;
+    width: 20rem;
+    min-width: 20rem;
+  
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    animation-name: animacao;
+    animation-duration: 1s
+  }
   
