--- a/financeiro/financeiro.css
+++ b/financeiro/financeiro.css
@@ -17,7 +17,7 @@ table {
   }
   
   .modal label {
-    width: 5.5rem;
+    width: 90px;
     display: inline-block;
   }
   
@@ -56,7 +56,7 @@ table {
   .corpoModal {
     background-color: #fefefe;
     margin: 15% auto;
-    padding: 10px 20px;
+    padding: 10px 10px;
     border: 1px solid #888;
     width: 20rem;
     min-width: 20rem;
