--- a/financeiro/estilos.css
+++ b/financeiro/estilos.css
@@ -62,6 +62,9 @@ table #col_sel, table .selecao {
   width: 1.5rem;
 }
 
+.divisor{
+  color: #999;
+}
 
 button {
   cursor: pointer;
@@ -105,6 +108,11 @@ input, select {
   transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out; 
 }
 
+.corpoModal input{
+  width: 180px;
+}
+
+
 input:focus {
   color: #555;
   background-color: #fff;
@@ -125,21 +133,46 @@ input:focus {
   background-color: rgba(0,0,0,0.4);
 }
 
+/* .corpoModal {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 1fr 1fr 2fr 1fr;
+} */
+
+/* .receitas{
+  grid-area: receitas;
+}
+. */
+.modalContent{
+  border: 1px solid #999;
+  padding: 0 5px;
+  border-radius: 10px;
+}
+
+
 .corpoModal header {
   margin-top: 0;
 }
 
 .corpoModal {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   background-color: #fefefe;
   margin: 15% auto;
   padding: 10px 20px;
   border: 1px solid #888;
   width: 25rem;
   min-width: 25rem;
-
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   animation-name: animacao;
   animation-duration: 1s
+}
+.cabecalhoRodape{
+  border: 1px solid white;
+  padding: 0 5px;
+  border-radius: 10px;
+
 }
 
 @keyframes animacao {
