--- a/financeiro/estilos.css
+++ b/financeiro/estilos.css
@@ -129,7 +129,7 @@ input:focus {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow-y: scroll;
   background-color: rgba(0,0,0,0.4);
 }
 
@@ -172,7 +172,6 @@ input:focus {
   border: 1px solid white;
   padding: 0 5px;
   border-radius: 10px;
-
 }
 
 @keyframes animacao {
