--- a/financeiro/estilos.css
+++ b/financeiro/estilos.css
@@ -62,10 +62,6 @@ table #col_sel, table .selecao {
   width: 1.5rem;
 }
 
-.divisor{
-  color: #999;
-}
-
 button {
   cursor: pointer;
   outline: 0;
@@ -129,7 +125,7 @@ input:focus {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
+  overflow: auto;
   background-color: rgba(0,0,0,0.4);
 }
 
@@ -144,7 +140,8 @@ input:focus {
 }
 . */
 .modalContent{
-  border: 1px solid #999;
+  background-color: #DEE2E6;
+  border: 1px solid #DEE2E6;
   padding: 0 5px;
   border-radius: 10px;
 }
