--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ body{
     background-color: white;
     width: 100%;
     height: 100%;
-    /* overflow-x: hidden;    */
+    overflow-x: hidden;   
     overflow: auto;
     /* border: 1px solid red; */
 }
