--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     /* align-items: center; */
     flex-direction: row;
     background-color: #ddd;
-    margin: 50px;
+    margin: 10px;
 }
 .logo{
     background-color: blueviolet;
@@ -79,6 +79,7 @@ body{
     width: 100%;
     height: 100vh;  
     /* margin: 0px 0px 0px 0px;        */
+    /* overflow-y: scroll; */
 }
 
 .aba{
@@ -124,8 +125,8 @@ body{
     background-color: white;
     width: 100%;
     height: 100%;
-    overflow-x: hidden;   
-    overflow: auto;
+    /* overflow-x: hidden;    */
+    /* overflow: auto; */
     /* border: 1px solid red; */
 }
 
