--- a/financeiro/financeiro.css
+++ b/financeiro/financeiro.css
@@ -1,3 +1,18 @@
+/* 
+@media screen and (max-width: 480px){
+  .menu{
+   margin: 0;
+  }
+  .principalTarefa{
+   margin: 0;
+  }
+  .corpoModal {    
+    margin: 15% auto;    
+  }
+  
+   
+ } */
+
 .principalFinanceiro{
   height: 1000px;
   margin: 35px 0 auto 10px;
@@ -167,6 +182,7 @@ button:disabled {
 }
 
 input, select {
+  margin: 10px;
   padding: 6px 12px;
   font-size: 1rem;
   font-weight: 100;
@@ -208,6 +224,7 @@ input:focus {
 
 .modalContent{
   /* background-color: #DEE2E6; */
+  
   border: 1px solid #cacbcc;
   padding: 0 5px;
   border-radius: 10px;
@@ -215,8 +232,14 @@ input:focus {
 .corpoModal header {
   margin-top: 0;
 }
-
+.modalContent p{
+  margin: 5px;
+}
+/* .modalContent input{
+  width: 50px;
+} */
 .corpoModal {  
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -224,12 +247,16 @@ input:focus {
   margin: 10% auto;
   padding: 10px 20px;
   border: 1px solid #888;
-  width: 25rem;
-  min-width: 25rem;
+  width: 24rem;
+  min-width: 24rem;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   animation-name: animacao;
   animation-duration: 1s;
   overflow: auto;
+}
+
+.corpoModal label{
+  width: 100px;
 }
 .cabecalhoRodape{
   border: 1px solid white;
@@ -247,7 +274,7 @@ input:focus {
   float: right;
   font-size: 28px;
   font-weight: bold;
-  margin-top: -1rem;
+  margin-top: -0.5rem;
 }
 
 #fechaModal:hover,
