--- a/home/style.css
+++ b/home/style.css
@@ -1,3 +1,12 @@
+/* @media only screen and (max-device-width: 480px){
+   .menu{
+    margin: 0;
+   }
+   .grid{
+    margin: 0;
+   }
+    
+  } */
 
 /* CONTEUDO HOME */
 
